--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "firebaseui",
-  "version": "4.8.0",
+  "name": "firebaseui-vi",
+  "version": "5.0.9",
   "description": "Javascript library for customizable UI on top of Firebase SDK",
   "files": [
-    "dist/firebaseui.js",
+    "dist/firebaseui__vi.js",
     "dist/firebaseui.css",
-    "dist/npm.js",
-    "dist/esm.js",
+    "dist/npm__vi.js",
+    "dist/esm__vi.js",
     "dist/index.d.ts",
     "dist/externs",
     "LICENSE",
     "README.md",
     "package.json"
   ],
-  "main": "./dist/npm.js",
-  "module": "./dist/esm.js",
+  "main": "./dist/npm__vi.js",
+  "module": "./dist/esm__en.js",
   "types": "./dist/index.d.ts",
   "style": "dist/firebaseui.css",
   "scripts": {
@@ -22,19 +22,17 @@
     "build-all": "gulp build-all",
     "build-soy": "gulp build-soy",
     "demo": "npm run build && ./buildtools/run_demo.sh",
-    "test": "npm run build && npm run generate-test-files && ./buildtools/run_tests.sh",
+    "test": "npm run build && npm run generate-test-files && buildtools\\run_tests.sh",
     "serve": "npm run build && npm run generate-test-files && gulp serve",
-    "generate-test-files": "./buildtools/generate_test_files.sh",
-    "prepublish": "npm run test && cp -r dist demo/public"
+    "generate-test-files": "buildtools\\generate_test_files.sh",
+    "pp": "cp -r dist demo/public",
+    "demo2": "buildtools\\run_demo.sh"
   },
   "test": "npm run test",
   "author": "Google",
   "repository": {
     "type": "git",
-    "url": "https://github.com/firebase/firebaseui-web.git"
-  },
-  "publishConfig": {
-    "registry": "https://wombat-dressing-room.appspot.com"
+    "url": "https://github.com/hunglmtb/firebaseui-web.git"
   },
   "license": "Apache-2.0",
   "devDependencies": {
